# TUD

./: .gitignore  CMakeLists.txt  README.md  flake.nix
lib/tud/: CMakeLists.txt
lib/tud/include/: client_discovery.h  networking.h  server_discovery.h  udp_structure.h
lib/tud/src/: client_discovery.cpp  networking.cpp  server_discovery.cpp  udp_structure.cpp
test/client/: CMakeLists.txt  main.cpp
test/server/: CMakeLists.txt  main.cpp
